--- a/problem-a/css/style.css
+++ b/problem-a/css/style.css
@@ -10,6 +10,10 @@ g circle.small {
     fill: #573d29;
 }
 
+rect {
+    opacity: 0;
+}
+
 path {
     stroke: #5f5f5f;
     stroke-width: 8px;
@@ -25,16 +29,15 @@ path#interactive:hover {
     fill: #bd250d;
 }
 
-path:last-child {
+path:last-of-type {
     stroke: none;
-    stroke-width: 0px;
 }
 
 rect {
     opacity: 0;
 }
 
-g circle, g rect {
+g circle, rect#rect {
     fill: #c0c0c0;
     stroke: none;
     opacity: 1;
