--- a/problem-b/css/style.css
+++ b/problem-b/css/style.css
@@ -1,1 +1,132 @@
-/* your CSS goes here */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Nunito Sans", Arial, sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+}
+
+h1 {
+    font-family: "Raleway", Helvetica, sans-serif;
+    font-size: 3.5rem;
+    font-weight: 300;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+h2, h3, h4, h5, h6 {
+    font-family: "Raleway", Helvetica, sans-serif;
+    font-size: 2rem;
+    font-weight: 300;
+    margin-top: 0;
+    margin-bottom: 0.5rem;
+}
+
+.container {
+    max-width: 960px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1rem;
+}
+
+p, dl {
+    margin-top: 0;
+    margin-bottom: 1rem;
+}
+
+nav {
+    position: fixed;
+    top: 0;
+    left: 0; 
+    width: 100%;
+    color: white;
+    background-color: #2c96bf;
+    padding: 0.5rem;
+    padding-bottom: 1rem;
+}
+
+nav ul {
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 1rem;
+}
+
+header {
+    color: white;
+    padding-top: 6rem;
+    padding-bottom: 1rem;
+    background-image: url('../img/paul-gilmore-145802-unsplash.jpg');
+    background-size: cover;
+    background-position: center;
+    background-color: #0084af;
+}
+
+.motto {
+    font-style: italic;
+    font-size: 1.25rem;
+}
+
+#menu {
+    background-color: #f0f0f0;
+}
+
+#menu dl dt {
+    font-size: 1.25rem;
+    font-weight: bold;
+    margin-top: 1rem;
+}
+
+#menu dl dd {
+    margin: 0;
+}
+
+#menu img {
+    height: 200px;
+    border-radius: 15px;
+}
+
+#about {
+    background-color: #e0e0e0;
+    line-height: 1.5;
+}
+
+footer {
+    color: white;
+    background-color: #3e1305;
+}
+
+footer a {
+    color: white;
+    text-decoration: none;
+}
+
+footer p {
+    margin: 0;
+    line-height: 1.25;
+}
+
+footer p:last-child {
+    padding-top: 8px;
+}
+
+.material-icons {
+    position: relative;
+    top: 5px;
+}
+
+nav ul li a {
+    color: black;
+    text-decoration: none;
+}
+
+nav ul li a:hover {
+    color: #f0f0f0;
+    border-bottom: solid 0.8rem #f0f0f0;
+    transition: 0.25s ease-out;
+}
