--- a/problem-c/css/style.css
+++ b/problem-c/css/style.css
@@ -1,4 +1,67 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Lato", "Helvetica Neue", "Helvetica", sans-serif;
   margin: 0;
+  height: inherit;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1;
+}
+
+main div {
+  display: flex;
+  height: 100%;
+}
+
+main div section:first-of-type {
+  flex-basis: 240px;
+}
+
+main div section:nth-of-type(2) {
+  flex: 1;
+  background-color: #eee;
+}
+
+main div section:nth-of-type(3) {
+  flex-basis: 180px;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+
+main section div {
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+main section div div {
+  flex-wrap: wrap;
+  flex: 0 0 250px;
+  background-color: white;
+  margin: 0.5rem;
+  border-radius: 10px;
+  box-shadow:
+    0 1px 3px rgba(0, 0, 0, 0.16),
+    0 1px 3px rgba(0, 0, 0, 0.23)
+}
+
+main section div div p {
+  padding: 0.5rem 1rem;
+}
+
+main section div div img {
+  border-radius: 10px 10px 0 0;
+}
+
+.oneem {
+  padding: 1em;
 }
