--- a/problem-c/css/style.css
+++ b/problem-c/css/style.css
@@ -15,12 +15,21 @@ body {
 }
 
 main {
+  display: flex;
   flex: 1;
+  height: 100%;
 }
 
 main div {
   display: flex;
+  flex: 1;
   height: 100%;
+}
+
+main div section div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 main div section:first-of-type {
@@ -38,12 +47,7 @@ main div section:nth-of-type(3) {
   flex-shrink: 0;
 }
 
-main section div {
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-main section div div {
+main div section div div {
   flex-wrap: wrap;
   flex: 0 0 250px;
   background-color: white;
@@ -54,11 +58,11 @@ main section div div {
     0 1px 3px rgba(0, 0, 0, 0.23)
 }
 
-main section div div p {
+main div section div div p {
   padding: 0.5rem 1rem;
 }
 
-main section div div img {
+main div section div div img {
   border-radius: 10px 10px 0 0;
 }
 
